2008-12-18  Daniel Elstner  <danielk@openismus.com>

	* clutter/src/behaviour-path.{ccg,hg} (BehaviourPath): Switch to
	the new Clutter::Path interface.

2008-12-18  Daniel Elstner  <danielk@openismus.com>

	* clutter/tools/convert_cluttermm.m4: Add conversions to and from
	Clutter::Path.

2008-12-18  Daniel Elstner  <danielk@openismus.com>

	* clutter/src/alpha.{ccg,hg} (ALPHA_*): Replace global slot objects
	for the convenience alpha functions by ordinary static methods of
	class Alpha.  This is just as easy to use but simpler and without
	the trouble associated with the runtime initialization  of global
	objects in dynamic libraries.  Also adapt the code to the additions
	and syntax changes in the Clutter API.
	(Alpha::Alpha): Remove the ctor which takes a plain ClutterFunction
	argument.  If absolutely necessary, there is always the C API.

2008-12-18  Daniel Elstner  <danielk@openismus.com>

	* clutter/src/path.{ccg,hg} (Path::Nodes): New proxy container class
	which implements an STL-style interface to the PathNodes of a Path.
	(Path::Nodes::reference): New proxy "reference" class which enables
	write access to a Path through iterators or array subscripting.
	(Path::Nodes::const_iterator): New random access iterator type.
	(Path::Nodes::iterator): New writable random access iterator type.

2008-12-16  Daniel Elstner  <danielk@openismus.com>

	* clutter/src/alpha.{ccg,hg}: Temporarily disable the global
	ALPHA_* function slots.  The code needs to be reworked as the
	corresponding Clutter API has changed, and also because I don't
	like it.
	This removes the last obstacle to get cluttermm itself to build
	again.  The examples still fail to compile, though.

2008-12-16  Daniel Elstner  <danielk@openismus.com>

	* clutter/src/behaviour-path.{ccg,hg}: Remove wrapper methods
	for functionality that was moved into the separate ClutterPath
	class.  Builds now but needs more work.

2008-12-16  Daniel Elstner  <danielk@openismus.com>
